# Cestra

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: Platform.cmake
cmake/Compilers/: gcc.cmake  msvc.cmake
cmake/Modules/: FindBoost.cmake  FindMySQL.cmake
cmake/Platform/: Linux.cmake  Windows.cmake
configs/: game.conf  realm.conf
dep/: DependeciesList.txt
game/: .classpath  .gitignore  Game_Config.txt  [Windows] Start Game.bat  config.properties  game.conf  start.bat
game/src/common/: Ancestra.java  Commands.java  ConditionParser.java  Constants.java  Formulas.java  IA.java  Main.java  Pathfinding.java  SQLManager.java  SocketManager.java  World.java
game/src/communication/: ComServer.java
game/src/game/: GameServer.java  GameThread.java
game/src/objects/: Action.java  Carte.java  Compte.java  Fight.java  House.java  Metier.java  Monstre.java  Personnage.java  Trunk.java
game/src/org/aestia/client/: Player.java
game/src/org/aestia/common/: Formulas.java
game/src/org/aestia/job/: JobAction.java
game/src/org/aestia/kernel/: Config.java  Console.java  Main.java
game/src/org/aestia/object/: Object.java  ObjectTemplate.java
game/src/org/cestra/client/: Account.java  Player.java
game/src/org/cestra/command/: Admin.java  Command.java  CommandPlayer.java
game/src/org/cestra/common/: ConditionParser.java  CryptManager.java  Formulas.java  Pathfinding.java  SocketManager.java
game/src/org/cestra/db/: Database.java
game/src/org/cestra/dynamic/: FormuleOfficiel.java  Migration.java  Noel.java
game/src/org/cestra/entity/: Collector.java  Dragodinde.java  Pet.java  PetEntry.java  Prism.java
game/src/org/cestra/exchange/: ExchangeClient.java  ExchangeHandler.java  ExchangePacketHandler.java
game/src/org/cestra/fight/: Challenge.java  Fight.java  Fighter.java
game/src/org/cestra/game/: GameAction.java  GameClient.java  GameHandler.java  GameServer.java
game/src/org/cestra/hdv/: Hdv.java  HdvCategory.java  HdvEntry.java  HdvLine.java  HdvTemplate.java
game/src/org/cestra/job/: Job.java  JobAction.java  JobConstant.java  JobCraft.java  JobStat.java
game/src/org/cestra/kernel/: Boutique.java  Config.java  Console.java  Constant.java  Main.java  Reboot.java
logon/: .classpath  .project  [Windows] Start Logon.bat  [Windows] Start Realm.bat  config.conf  logon.conf  start.bat
logon/src/common/: SQLManager.java  SocketManager.java
logon/src/objects/: Account.java
logon/src/realm/: RealmThread.java
realm/: .classpath  .gitignore  Realm_Config.txt  logon.conf
realm/src/common/: Ancestra.java  CryptManager.java  Main.java  Realm.java  SQLManager.java  SendManager.java
realm/src/communication/: ComServer.java  ComThread.java
realm/src/realm/: RealmServer.java
src/: CMakeLists.txt
src/game/: CMakeLists.txt  Main.cpp  Main.hpp  Master.cpp  Master.hpp  stdafx.cpp  stdafx.hpp
src/realm/: CMakeLists.txt  Main.cpp  Master.cpp  Master.hpp  RealmConsole.cpp  RealmConsole.hpp  stdafx.hpp
src/shared/: CMakeLists.txt  Common.hpp  Configuration.cpp  Configuration.hpp  Database.cpp  Database.hpp  FileLog.cpp  FileLog.hpp  SocketMgr.cpp  SocketMgr.hpp
(+163 files in other folders)
